2006-10-27  Akim Demaille  <akim@lrde.epita.fr>

	More ufloat splitting
	* ull-fixed-point.cc, ull-fixed-point.hh: New.
	* ufloat.hh, ufloat.cc: Extracted from here.
	* libport.mk: Adjust.

2006-10-26  Akim Demaille  <akim@lrde.epita.fr>

	singleton-ptr.hh
	* singleton-ptr.hh: New.
	* libport.mk, README: Adjust.

2006-10-26  Akim Demaille  <akim@lrde.epita.fr>

	fwd.hh
	* fwd.hh: New.
	* libport.mk, README: Adjust, and also complete with recent
	ufloat split.

2006-10-26  Akim Demaille  <akim@lrde.epita.fr>

	Split ufloat.hh and ufloat.cc
	* uffloat.cc: New, extracted from...
	* ufloat.cc: here.
	* ulong-fixed-point.hh, uffloat.hh: New, extracted from...
	* ufloat.hh: Here.

2006-10-26  Akim Demaille  <akim@lrde.epita.fr>

	Fix include
	* ufloat.cc: Include ufloat.hh, not ufloat.h.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	install ufloat.h too.
	* libport.mk: Do that.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Add ufloat.h
	* ufloat.h: New.
	QnD, eventually should be removed.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Import ufloat, there are too many copies already
	* ufloat.hh, ufloat.cc: New.
	From the kernel1.
	* libport.mk, README: Adjust.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Installable libport
	* libport.mk: New.
	* README: Adjust.

2006-10-21  Akim Demaille  <akim.demaille@free.fr>

	Diagnose missing pthread.h.
	* thread.hh: Do that.

2006-10-21  Akim Demaille  <akim.demaille@free.fr>

	utime.hh
	* utime.hh: New, from kernel1/src/console.cc.
	* README: Complete.

2006-10-20  Matthieu Nottale  <nottale@gostai.com>

	typo fix 

	* lockable.hh: Fix typo.

2006-10-18  Akim Demaille  <demaille@gostai.com>

	Avoid warnings for unused arguments
	* lockable.hh: Do that.

2006-10-18  Akim Demaille  <demaille@gostai.com>

	Check if defined before using 
	* lockable.hh: Protect against "undefined macro" warnings.

2006-10-18  Akim Demaille  <demaille@gostai.com>

	Adjust to the current build-aux.